--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "flask-login>=0.6.3",
     "flask-sqlalchemy>=3.1.1",
     "psycopg2-binary>=2.9.10",
+    "pydantic-ai[logfire]>=0.0.25",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
 ]
