--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 description = "Backend for AI Assistant"
 requires-python = ">=3.12"
 dependencies = [
-    "authlib>=1.4.1",
+    "authlib>=1.5.1",
+    "fastapi[standard]>=0.115.11",
     "flask>=3.1.0",
     "flask-alembic>=3.1.1",
     "flask-login>=0.6.3",
@@ -13,4 +14,5 @@ dependencies = [
     "pydantic-ai[logfire]>=0.0.25",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
+    "sqlmodel>=0.0.23",
 ]
