--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,9 @@ version = "0.1.0"
 description = "Backend for AI Assistant"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.14.1",
     "authlib>=1.5.1",
     "fastapi[standard]>=0.115.11",
-    "flask>=3.1.0",
-    "flask-alembic>=3.1.1",
-    "flask-login>=0.6.3",
-    "flask-sqlalchemy>=3.1.1",
     "psycopg2-binary>=2.9.10",
     "pydantic-ai[logfire]>=0.0.25",
     "python-dotenv>=1.0.1",
