--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ dependencies = [
     "alembic>=1.14.1",
     "authlib>=1.5.1",
     "fastapi[standard]>=0.115.11",
+    "itsdangerous>=2.2.0",
     "psycopg2-binary>=2.9.10",
     "pydantic-ai[logfire]>=0.0.25",
     "python-dotenv>=1.0.1",
-    "requests>=2.32.3",
     "sqlmodel>=0.0.23",
 ]
