--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,8 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "pydantic-ai[logfire]>=0.0.36",
     "python-dotenv>=1.0.1",
+    "rank-bm25>=0.2.2",
+    "sentence-transformers>=4.1.0",
     "sqlmodel>=0.0.23",
+    "torch>=2.7.0",
 ]
